--- a/admin.html
+++ b/admin.html
@@ -54,7 +54,7 @@
   </div>
 
 <script>
-const CONFIG = { USE_SERVER_API:false, API_BASE:'' };
+const CONFIG = { USE_SERVER_API:true, API_BASE:'https://darkstore.onrender.com' };
 
 let users = [], products = [], messages = {};
 
